[project]
name = "rubicon-openenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aamishahmad", email = "aamish.ahmad99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.3",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
